--- a/css/scss/pedidos.scss
+++ b/css/scss/pedidos.scss
@@ -8,20 +8,43 @@ body {
 .category-title {
     align-self: flex-start;
     font-size: 20px;
-    padding: 20px;
+    padding: 25px;
 }
 
-.categorys {
-    display: flex;
-    align-self: flex-start;
-    overflow-wrap: break-word;
-    .category {
-        background-color: #fff;
-        width: 100px;
-        height: 30px;
+.category {
+    border: none;
+    outline: none;
+    
+    background-color: #fff;
 
-        border: none;
-        border-right: 1px solid rgba(0, 0, 0, 0.267);
+    font-size: 1.1rem;
+    
+    transition: all .1s ease;
+    &:focus {
+        color: #ff0000;
     }
 }
+
+.swiper {
+    width: 100%;
+    height: 100%;
+
+    margin-bottom: 25px;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
