--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -43,4 +43,6 @@ body {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-}/*# sourceMappingURL=pedidos.css.map */
+}
+
+/*COMIDAS*//*# sourceMappingURL=pedidos.css.map */
