--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,17 +4,15 @@
 
 @font-face {
     font-family: noodle;
-    src: url('../fonts/big_noodle_titling_oblique.ttf') format('opentype');
+    src: url('../../assets/fonts/big_noodle_titling_oblique.ttf') format('opentype');
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap');
+@import url('../../assets/fonts/Amiko-Bold.ttf');
 
 /*background*/
 
 #bg {
-    height: 90vh;
-    width: 100vw;
-    background-image: url(../img/BG.png);
+    background-image: url(../../assets/BG.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -58,6 +56,35 @@
     padding-left: 16px;
 
     border-radius: 4px;
+    cursor: pointer;
 }
 
 /*-----*/
+
+/*DESKTOP VER*/
+
+@media (min-width: 450px) {
+    #bg {
+        background-image: none;
+        background-color: #23211C;
+        height: 100vh;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        overflow-y: hidden;
+    }
+
+    .titulo {
+        margin: 0;
+    }
+
+    .container {
+        margin: 0;
+
+        display: flex;
+        flex-direction: column;
+        gap: 100px;
+    }
+}
