--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -50,3 +50,40 @@ body {
 
   /*COMIDAS*/
 
+.comidas-container {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  width: 100%;
+  height: 400px;
+  overflow-y: scroll;
+  border-top: 0.5px solid rgba(0, 0, 0, 0.438);
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.384);
+  .prato-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  
+    justify-content: space-between;
+    padding-top: 16px;
+    padding-right: 36px;
+    padding-bottom: 16px;
+    padding-left: 36px;
+    .prato {
+      font-size: 17.6px;
+    }
+    .check-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+  
+      gap: 7px;
+      .preço {
+  
+      }
+      .check {
+  
+      }
+    }
+  }
+}
