--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   display: flex;
   flex-direction: column;
@@ -62,9 +63,9 @@ body {
   align-items: center;
   justify-content: space-between;
   padding-top: 16px;
-  padding-right: 36px;
+  padding-right: 19px;
   padding-bottom: 16px;
-  padding-left: 36px;
+  padding-left: 19px;
 }
 .comidas-container .prato-container .prato {
   font-size: 17.6px;
@@ -74,4 +75,39 @@ body {
   flex-direction: row;
   align-items: center;
   gap: 7px;
+}
+.comidas-container .prato-container .check-container .preço {
+  letter-spacing: 1.5px;
+  color: #ff0000;
+  font-weight: bold;
+}
+.observation {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.observation .obs-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.observation .obs-container h1 {
+  color: rgba(0, 0, 0, 0.4862745098);
+  font-weight: bold;
+}
+.observation .obs-textarea {
+  resize: none;
+  height: 40px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1.5px solid #D9D9D9;
+  font-size: 0.9rem;
+}
+
+.payment-container {
+  display: flex;
 }/*# sourceMappingURL=pedidos.css.map */
