--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -29,7 +29,7 @@ body {
     width: 100%;
     height: 100%;
 
-    margin-bottom: 25px;
+    margin-bottom: 30px;
   }
 
   .swiper-slide {
@@ -53,24 +53,45 @@ body {
 .comidas-container {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  align-items: center;
+  gap: 40px;
   width: 100%;
   height: 400px;
   overflow-y: scroll;
-  border-top: 0.5px solid rgba(0, 0, 0, 0.438);
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.384);
+  padding-top: 20px;
+  background-color: #fff;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #ff000099;
+    border-radius: 30px;
+  }
   .prato-container {
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    width: 80%;
+    height: 60px;
   
     justify-content: space-between;
     padding-top: 16px;
     padding-right: 19px;
     padding-bottom: 16px;
-    padding-left: 19px;
+    padding-left: 10px;
+
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
+    background-color: #fff;
     .prato {
       font-size: 17.6px;
+    }
+    .comida-img {
+      width: 90px;
+      border-radius: 50%;
     }
     .check-container {
       display: flex;
@@ -80,11 +101,15 @@ body {
       gap: 7px;
       .preço {
         letter-spacing: 1.5px;
-        color: #ff0000;
-        font-weight: bold;
+        color: #ff0000d2;
+        font-weight: regular;
       }
       .check {
         
+      }
+      .comida-desc {
+        display: flex;
+        flex-direction: column;
       }
     }
   }
@@ -125,7 +150,7 @@ body {
 
 .payment-container {
   display: flex;
-  
+
   .payment-title {
 
   }
