--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -6,10 +6,22 @@ body {
   align-items: center;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  margin-left: 50px;
+}
+.header img {
+  opacity: 0.5;
+  width: 25px;
+}
+
 .category-title {
   align-self: flex-start;
   font-size: 20px;
-  padding: 25px;
+  padding: 25px 25px 25px 10px;
 }
 
 .category {
@@ -32,7 +44,6 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,4 +143,11 @@ body {
 
 .payment-container {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.payment-container .total {
+  color: rgba(255, 0, 0, 0.8235294118);
+  font-weight: regular;
 }/*# sourceMappingURL=pedidos.css.map */
