--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -163,6 +163,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 
   padding-bottom: 20px;
   .total {
