--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -145,6 +145,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
   padding-bottom: 20px;
 }
 .payment-container .total {
