--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -171,3 +171,13 @@ body {
     font-weight: regular;
   }
 }
+
+.btn-send {
+  border: none;
+  outline: none;
+  padding: 20px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #ff0000;
+  width: 100%;
+}
