font-size do botão

--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -161,4 +161,5 @@ body {
   color: #fff;
   background-color: #ff0000;
   width: 100%;
+  font-size: 1.2rem;
 }/*# sourceMappingURL=pedidos.css.map */
