--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -115,6 +115,30 @@ body {
   flex-direction: column;
 }
 
+.custom-checkbox input {
+  display: none;
+}
+
+.custom-checkbox input + label:before {
+  content: "";
+  position: relative;
+  top: 20px;
+  left: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  display: inline-block;
+}
+
+.custom-checkbox input:checked + label:before {
+  background-image: url("../../../assets/icons8-check.svg");
+  background-color: green;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14px;
+}
+
 .observation {
   display: flex;
   flex-direction: column;
