--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -116,9 +116,6 @@ body {
         color: #ff0000d2;
         font-weight: regular;
       }
-      .check {
-        
-      }
       .comida-desc {
         display: flex;
         flex-direction: column;
@@ -126,6 +123,31 @@ body {
     }
   }
 }
+
+.custom-checkbox input {
+    display: none;
+}
+
+.custom-checkbox input + label:before {
+  content: "";
+  position: relative;
+  top: 20px;
+  left: 5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  display: inline-block;
+}
+
+.custom-checkbox input:checked + label:before {
+  background-image: url("../../../assets/icons8-check.svg");
+  background-color: green;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14px;
+}
+
 
 .observation {
   display: flex;
