--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -71,6 +71,7 @@ body {
   height: 400px;
   overflow-y: scroll;
   padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #fff;
 
   &::-webkit-scrollbar {
