adicionei as fotos das comidas

--- a/src/css/scss/pedidos.scss
+++ b/src/css/scss/pedidos.scss
@@ -106,6 +106,12 @@ body {
       width: 90px;
       border-radius: 50%;
     }
+
+    .camarao {
+      width: 70px;
+      margin-left: 10px;
+    }
+
     .check-container {
       display: flex;
       flex-direction: row;
