--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -100,6 +100,10 @@ body {
   width: 90px;
   border-radius: 50%;
 }
+.comidas-container .prato-container .camarao {
+  width: 70px;
+  margin-left: 10px;
+}
 .comidas-container .prato-container .check-container {
   display: flex;
   flex-direction: row;
