--- a/src/css/scss/pedidos.css
+++ b/src/css/scss/pedidos.css
@@ -192,4 +192,8 @@ body {
   background-color: #ff0000;
   width: 100%;
   font-size: 1.1rem;
+}
+
+.link-send {
+  width: 100%;
 }/*# sourceMappingURL=pedidos.css.map */
